REQ000934093RRTV3